to do with react add

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
-.App {
-  text-align: center;
-}
+    .App{
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+    padding: 10px;
+    }
+    .App h1{
+    margin-bottom: 30px;
+    }
+    .container{
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        width: 40rem;
+        border: 1px solid #ccc ;
+        border-radius: 5px;
+        padding: 20px;
+        background-color: #fff;
+    }
+    .todo{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 20rem;        
+        margin: 10px;      
+        
+    }
+    input{
+        border: 1px solid #ccc;
+        border-radius:5px ;
+        padding:5px 3px ;
+        outline: none;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+    }
+    input:focus{
+        border-radius: 3px solid blue ;
+    }
+    .formcontrol{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 20rem;
+        margin-bottom: 20px;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+    }
+    .button{
+        color:#6d28d9 ;
+        background-color: #fff;
+        border:1px solid #6d28d9 ;
+        border-radius:5px ;
+        outline: none ;
+        padding: 5px 10px;
+        cursor: pointer;
+    }
